# Arch1

./: .gitignore  compile_commands.json
app/: CMakeLists.txt
app/src/: main.cpp  sorter.h
lib/: CMakeLists.txt
lib/logger/: CMakeLists.txt
lib/logger/inc/: logger.h
lib/logger/src/: logger.cpp
